[package]
name = "format"
version = "0.1.0"
authors = ["devin7788 <andy129408@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.17.0"
cc = { version = "1.0", features = ["parallel"] }
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"